  It releases the lock after every batch (defaulting to 1 second processing).
  This makes the packing process faster while at the same time yielding to
  regular ZODB commits when busy.

- Do not hold the commit lock during pack cleanup while deleting rows from
  the object reference tables; these tables are pack-specific and regular
  ZODB commits never touch these.

1.5.0b1 (2011-02-05)
--------------------

- Added a state_size column to object_state, making it possible
  to query the size of objects without loading the state.  The new
  column is intended for gathering statistics.  A schema migration
  is required.

- Added more logging during zodbconvert to show that something is
  happening and give an indication of how far along the process is.

- Fixed a missing import in the blob cache cleanup code.

- Added a --dry-run option to zodbpack.

- Replaced the graph traversal portion of the pack code with
  a more efficient implementation using Python sets (instead of SQL).
  The new code is much faster for packing databases with deeply
  nested objects.

1.5.0a1 (2010-10-21)
--------------------

- Added an option to store ZODB blobs in the database.  The option is
  called "shared-blob-dir" and it behaves very much like the ZEO
  option of the same name.  Blobs stored in the database are broken
  into chunks to reduce the impact on RAM.

- Require setuptools or distribute.  Plain distutils is not sufficient.

1.4.2 (2011-02-04)
------------------

- Fixed compatibility with ZODB 3.10.  As reported by Jürgen Herrmann,
  there was a problem with conflict errors.  The RelStorage patch of the
  sync() method now works with ZODB 3.10.

- Fixed a bug in packing history-free databases.  If changes were
  made to the database during the pack, the pack code could delete
  too many objects.  Thanks to Chris Withers for writing test code
  that revealed the bug.  A schema migration is required for history-free
  databases; see notes/migration-to-1.4.txt.
